# whitebox-tools

./: .gitignore  Cargo.toml  DylibTest.py  LICENSE  LICENSE.txt  README.md  UserManual.txt  build.py  lib_test.py  lines_of_code_counter.d  old_build.py  readme.txt  run_tool.py  settings.json  tempCodeRunnerFile.py  test_tool.py  tool_porting.md  versioning_info.json  wb_runner.py  wb_runner_new.py  wbt.code-workspace  whitebox_example.py  whitebox_plugin_generator.py  whitebox_tools.py
whitebox-common/: Cargo.toml
whitebox-common/src/: lib.rs  plugins.rs
whitebox-common/src/algorithms/: delaunay_triangulation.rs  is_clockwise_order.rs  lzw.rs  mod.rs  poly_area.rs  poly_ops.rs  poly_perimeter.rs  smallest_enclosing_circle.rs
whitebox-common/src/configs/: mod.rs
whitebox-common/src/rendering/: box_whisker.rs  html.rs  mod.rs  scattergram.rs
whitebox-common/src/spatial_ref_system/: epsg_to_wkt.rs  mod.rs
whitebox-common/src/structures/: array2d.rs  bounding_box.rs  fixed_radius_search.rs  line_segment.rs  mod.rs  n_maximizer.rs  n_minimizer.rs  point2d.rs  point3d.rs  polyline.rs  polynomial_regression_2d.rs  radial_basis_function.rs  rectangle_with_data.rs
whitebox-common/src/utils/: byte_order_reader.rs  mod.rs
whitebox-lidar/: Cargo.toml
whitebox-lidar/src/: header.rs  las.rs  lib.rs  point_data.rs  zlidar_compression.rs
whitebox-plugins/: Cargo.toml
whitebox-plugins/src/conditional_evaluation/: conditional_evaluation.json  main.rs
whitebox-plugins/src/conditioned_latin_hypercube/: conditioned_latin_hypercube.json  main.rs
whitebox-plugins/src/convergence_index/: convergence_index.json  main.rs
whitebox-plugins/src/correct_stream_vector_direction/: correct_stream_vector_direction.json  main.rs
whitebox-plugins/src/edge_contamination/: edge_contamination.json  main.rs
whitebox-plugins/src/euclidean_width/: euclidean_width.json  main.rs
whitebox-plugins/src/exposure_towards_wind_flux/: exposure_towards_wind_flux.json  main.rs
whitebox-plugins/src/extract_by_attribute/: extract_by_attribute.json  main.rs
whitebox-plugins/src/gaussian_scale_space/: gaussian_scale_space.json  main.rs
whitebox-plugins/src/heat_map/: heat_map.json  main.rs
whitebox-plugins/src/individual_tree_detection/: individual_tree_detection.json  main.rs
whitebox-plugins/src/install_wb_extension/: install_wb_extension.json  main.rs
whitebox-plugins/src/launch_wb_runner/: launch_wb_runner.json  main.rs
whitebox-plugins/src/lidar_shift/: lidar_shift.json  main.rs
whitebox-plugins/src/local_quadratic_regression/: local_quadratic_regression.json  main.rs
whitebox-plugins/src/max_upslope_value/: main.rs  max_upslope_value.json
whitebox-plugins/src/normalize_lidar/: main.rs  normalize_lidar.json
whitebox-plugins/src/otsu_thresholding/: main.rs  otsu_thresholding.json
whitebox-plugins/src/qin_flow_accumulation/: main.rs  qin_flow_accumulation.json
whitebox-plugins/src/quinn_flow_accumulation/: main.rs  quinn_flow_accumulation.json
whitebox-plugins/src/raster_calculator/: main.rs  raster_calculator.json
whitebox-plugins/src/repair_stream_vector_topology/: main.rs  repair_stream_vector_topology.json
whitebox-plugins/src/rho8_flow_accumulation/: main.rs  rho8_flow_accumulation.json
whitebox-plugins/src/split_vector_lines/: main.rs  split_vector_lines.json
whitebox-plugins/src/travelling_salesman_problem/: main.rs  travelling_salesman_problem.json
whitebox-plugins/src/vector_stream_network_analysis/: main.rs  vector_stream_network_analysis.json
whitebox-raster/: Cargo.toml
whitebox-raster/src/: arcascii_raster.rs  arcbinary_raster.rs  esri_bil.rs  grass_raster.rs  idrisi_raster.rs  lib.rs  saga_raster.rs  surfer7_raster.rs  surfer_ascii_raster.rs  whitebox_raster.rs
whitebox-raster/src/geotiff/: geokeys.rs  ifd.rs  mod.rs  tiff_consts.rs
whitebox-runner/: Cargo.toml
whitebox-runner/src/: about.rs  deactivate_extension.rs  extension.rs  main.rs  settings_panel.rs  tool_dialog.rs  tool_info.rs  tools_panel.rs  tree.rs  update_extension.rs
whitebox-runner/src/custom_widgets/: mod.rs  toggle_switch.rs
whitebox-tools-app/: Cargo.toml  README.md  readme.txt  tool_porting.md  whitebox_plugin_generator.py
whitebox-tools-app/src/: main.rs
whitebox-tools-app/src/tools/: mod.rs
whitebox-tools-app/src/tools/data_tools/: add_point_coordinates_to_table.rs  clean_vector.rs  convert_nodata_to_zero.rs  convert_raster_format.rs  csv_points_to_vector.rs  export_table_to_csv.rs  join_tables.rs  lines_to_polygons.rs  merge_table_with_csv.rs  merge_vectors.rs  mod.rs  modify_nodata_value.rs  multipart_to_singlepart.rs  new_raster.rs  polygons_to_lines.rs  print_geotiff_tags.rs  raster_to_vector_lines.rs  raster_to_vector_points.rs  raster_to_vector_polygons.rs  reinitialize_attribute_table.rs  remove_polygon_holes.rs  set_nodata_value.rs  singlepart_to_multipart.rs  vector_lines_to_raster.rs  vector_points_to_raster.rs  vector_polygons_to_raster.rs
whitebox-tools-app/src/tools/gis_analysis/: aggregate_raster.rs  average_overlay.rs  block_maximum.rs  block_minimum.rs  boundary_shape_complexity.rs  buffer_raster.rs  centroid.rs  centroid_vector.rs  clip.rs  clip_raster_to_polygon.rs  clump.rs  compactness_ratio.rs  construct_vector_tin.rs  cost_allocation.rs  cost_distance.rs  cost_pathway.rs  count_if.rs  create_hexagonal_vector_grid.rs  create_plane.rs  create_rectangular_vector_grid.rs  deviation_from_regional_direction.rs  difference.rs  dissolve.rs  edge_proportion.rs  eliminate_coincident_points.rs  elongation_ratio.rs  erase.rs  erase_polygon_from_raster.rs  euclidean_allocation.rs  euclidean_distance.rs  extend_vector_lines.rs  extract_nodes.rs  extract_raster_values_at_points.rs  filter_raster_features_by_area.rs  find_lowest_or_highest_points.rs  find_patch_edge_cells.rs  highest_pos.rs  hole_proportion.rs  idw_interpolation.rs  intersect.rs  (+53 more)
whitebox-tools-app/src/tools/hydro_analysis/: average_flowpath_slope.rs  average_upslope_flowpath_length.rs  basins.rs  breach_depressions.rs  breach_depressions_least_cost.rs  breach_pits.rs  d8_mass_flux.rs  (+45 more)
(+924 files in other folders)
