
[package]
name = "whitebox_tools"
version = "0.14.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
description = "A library for analyzing geospatial data."
keywords = ["geospatial", "GIS", "remote sensing", "geomatics", "image processing", "lidar", "spatial analysis"]
readme = "README.md"
repository = "https://github.com/jblindsay/whitebox-tools/"
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "^1.1.0"
chrono = "0.4.6"
kdtree = "0.5.1"
libflate = "0.1.18"
lzw = "0.10.0"
nalgebra = "0.14.0"
num_cpus = "1.6.2"
rand = "0.5.0"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.9"
statrs = "0.9.0"
zip = "0.3.0"

[profile.release]
opt-level = 3
# opt-level = "z"
# lto = true
# debug = false
# codegen-units = 1
# panic = "abort"