[package]
name = "whitebox_common"
version = "2.0.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.3.1"
nalgebra = "0.18.0"
num-traits = "0.2.14"
rand = { version = "0.7", features = ["small_rng"] }
rstar = "0.7.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"

[build-dependencies]
rustc_version = "0.3.3"