[package]
name = "whitebox_common"
version = "2.3.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.4.3"
nalgebra = "0.32.2"
num-traits = "0.2.14"
rand = { version = "0.7", features = ["small_rng"] }
rstar = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[build-dependencies]
rustc_version = "0.3.3"