[package]
name = "whitebox_lidar"
version = "2.3.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.4.3"
chrono = "0.4.21"
las = { version = "0.8.0", features = ["laz"] }
miniz_oxide = "0.3.6"
zip = "0.3.0"
brotli = "3.3.0"
whitebox_common = { path = "../whitebox-common" }
whitebox_raster = { path = "../whitebox-raster" }
