[package]
name = "whitebox_plugins"
version = "2.3.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[[bin]]
name = "conditional_evaluation"
path = "src/conditional_evaluation/main.rs"

[[bin]]
name = "conditioned_latin_hypercube"
path = "src/conditioned_latin_hypercube/main.rs"

[[bin]]
name = "edge_contamination"
path = "src/edge_contamination/main.rs"

[[bin]]
name = "exposure_towards_wind_flux"
path = "src/exposure_towards_wind_flux/main.rs"

[[bin]]
name = "extract_by_attribute"
path = "src/extract_by_attribute/main.rs"

[[bin]]
name = "gaussian_scale_space"
path = "src/gaussian_scale_space/main.rs"

[[bin]]
name = "heat_map"
path = "src/heat_map/main.rs"

[[bin]]
name = "individual_tree_detection"
path = "src/individual_tree_detection/main.rs"

[[bin]]
name = "install_wb_extension"
path = "src/install_wb_extension/main.rs"

[[bin]]
name = "launch_wb_runner"
path = "src/launch_wb_runner/main.rs"

[[bin]]
name = "lidar_shift"
path = "src/lidar_shift/main.rs"

[[bin]]
name = "local_quadratic_regression"
path = "src/local_quadratic_regression/main.rs"

[[bin]]
name = "max_upslope_value"
path = "src/max_upslope_value/main.rs"

[[bin]]
name = "normalize_lidar"
path = "src/normalize_lidar/main.rs"

[[bin]]
name = "otsu_thresholding"
path = "src/otsu_thresholding/main.rs"

[[bin]]
name = "qin_flow_accumulation"
path = "src/qin_flow_accumulation/main.rs"

[[bin]]
name = "quinn_flow_accumulation"
path = "src/quinn_flow_accumulation/main.rs"

[[bin]]
name = "raster_calculator"
path = "src/raster_calculator/main.rs"

[[bin]]
name = "repair_stream_vector_topology"
path = "src/repair_stream_vector_topology/main.rs"

[[bin]]
name = "rho8_flow_accumulation"
path = "src/rho8_flow_accumulation/main.rs"

[[bin]]
name = "split_vector_lines"
path = "src/split_vector_lines/main.rs"

[[bin]]
name = "travelling_salesman_problem"
path = "src/travelling_salesman_problem/main.rs"

[[bin]]
name = "vector_stream_network_analysis"
path = "src/vector_stream_network_analysis/main.rs"

[dependencies]
evalexpr = "10.0.0"
fasteval = "0.2.4"
kd-tree = { version = "0.4.1", features = ["rayon"] }
kdtree = "0.6.0"
nalgebra = "0.18.0"
num_cpus = "1.13.0"
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.7.0"
rstar = "0.9.3"
tsp-rs = "0.1.0"
typenum = "1.15.0"
whitebox_common = { path = "../whitebox-common" }
whitebox_lidar = { path = "../whitebox-lidar" }
whitebox_raster = { path = "../whitebox-raster" }
whitebox_vector = { path = "../whitebox-vector" }