[package]
name = "whitebox_raster"
version = "2.0.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.3.1"
chrono = "0.4.15"
lzw = "0.10.0"
miniz_oxide = "0.3.6"
num_cpus = "1.6.2"
num-traits = "0.2.14"
whitebox_common = { path = "../whitebox-common" }