[package]
name = "whitebox_runner"
version = "0.1.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[features]
default = ["persistence"]
persistence = [
    "eframe/persistence",
    "egui/persistence",
    "serde",
]

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
image = "0.24.2"
reqwest = { version = "0.11.12", features = ["blocking"] }
rfd = "0.10.0"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1.0.87"
whitebox_vector = { path = "../whitebox-vector" }
zip-extract = "0.1.1"