[package]
name = "whitebox_tools"
version = "2.1.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.3.1"
chrono = "0.4.15"
kdtree = "0.6.0"
kd-tree = "0.4.1"
miniz_oxide = "0.3.6"
nalgebra = "0.18.0"
num_cpus = "1.6.2"
rand = { version = "0.7", features = ["small_rng"] }
rand_distr = "0.2.1"
rayon = "1.3.1"
rstar = "0.7.1"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.62"
statrs = "0.9.0"
typenum = "1.15.0"
whitebox_common = { path = "../whitebox-common" }
whitebox_lidar = { path = "../whitebox-lidar" }
whitebox_raster = { path = "../whitebox-raster" }
whitebox_vector = { path = "../whitebox-vector" }
