[package]
name = "whitebox_tools"
version = "2.4.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.4.3"
chrono = "0.4.24"
kdtree = "0.6.0"
kd-tree = "0.5.1"
miniz_oxide = "0.7.1"
nalgebra = "0.32.2"
num_cpus = "1.6.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.7.0"
rstar = "0.10.0"
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.94"
statrs = "0.16.0"
time = { version = "0.3.20", features = ["macros"] }
typenum = "1.16.0"
whitebox_common = { path = "../whitebox-common" }
whitebox_lidar = { path = "../whitebox-lidar" }
whitebox_raster = { path = "../whitebox-raster" }
whitebox_vector = { path = "../whitebox-vector" }
